applications/homepage/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: homepage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
      - name: homepage
        image: ghcr.io/thanos-io/thanos-community-website:latest
        ports:
        - containerPort: 80
