applications/homepage/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homepage
  name: homepage
spec:
  selector:
    app: homepage
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
